fixed fonts hopefully, and fixed bg overlay, which didn't show correctly in browser on mobiles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
   height: 200%;
   width: 200%;
   content: ' ';
+  top:-40%;
   backface-visibility: hidden;
   background: linear-gradient(rgba(50, 51, 42, 0.5), rgba(50, 51, 42, 0.5));
 }
